完成登录页面

--- a/login.html
+++ b/login.html
@@ -29,6 +29,7 @@
             placeholder="请输入用户名"
             autocomplete="off"
             class="layui-input"
+            name="username"
           />
         </div>
         <div class="layui-form-item">
@@ -39,6 +40,7 @@
             placeholder="请输入密码"
             autocomplete="off"
             class="layui-input"
+            name="password"
           />
         </div>
         <div class="layui-form-item">
